@@ -5,6 +5,6 @@ details.
 
 See the file 'INSTALL' for instructions on building from source.
 
-Walltime-panel is a GUI applet for remotely controlling the segment Timer
+Walltime-panel is a GUI applet for remotely controlling the segment timer
 on a Paravel Systems WallTime NTP Clock and Notification system.
  
