@@ -1,2 +1,4 @@
 2016-08-27 Fred Gleason <fredg@paravelsystems.com>
 	* Initial package creation.
+2016-08-27 Fred Gleason <fredg@paravelsystems.com>
+	* Added a '--clock-address=' argument.
